; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_hgafb.c_write_hga_w.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_hgafb.c_write_hga_w.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HGA_INDEX_PORT = common dso_local global i32 0, align 4
@HGA_VALUE_PORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8)* @write_hga_w to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_hga_w(i32 %0, i8 zeroext %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  store i32 %0, i32* %3, align 4
  store i8 %1, i8* %4, align 1
  %5 = load i8, i8* %4, align 1
  %6 = zext i8 %5 to i32
  %7 = load i32, i32* @HGA_INDEX_PORT, align 4
  %8 = call i32 @outb_p(i32 %6, i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = lshr i32 %9, 8
  %11 = load i32, i32* @HGA_VALUE_PORT, align 4
  %12 = call i32 @outb_p(i32 %10, i32 %11)
  %13 = load i8, i8* %4, align 1
  %14 = zext i8 %13 to i32
  %15 = add nsw i32 %14, 1
  %16 = load i32, i32* @HGA_INDEX_PORT, align 4
  %17 = call i32 @outb_p(i32 %15, i32 %16)
  %18 = load i32, i32* %3, align 4
  %19 = and i32 %18, 255
  %20 = load i32, i32* @HGA_VALUE_PORT, align 4
  %21 = call i32 @outb_p(i32 %19, i32 %20)
  ret void
}

declare dso_local i32 @outb_p(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
